# rcli

./: Cargo.toml  README.md  cliff.toml  typos.toml
fixtures/csv/: test_input_no_header.csv  test_input_with_header.csv  test_no_header.json  test_no_header.yaml  test_with_header.json  test_with_header.yaml
src/: lib.rs  main.rs
src/cli/: base64.rs  csv.rs  http.rs  mod.rs  passwd.rs
src/process/: base64.rs  csv.rs  http_serve.rs  mod.rs  passwd.rs
