[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["lsh <lhui.dev@gmail.com>"]
description = "Rust code template."
readme = "README.md"
repository = "https://github.com/lhui-dev/rcli"
license = "MIT"
keywords = ["template", "rust", "project"]
categories = ["development-tools"]

[dependencies]
