[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["lsh <lhui.dev@gmail.com>"]
description = "Rust code template."
readme = "README.md"
repository = "https://github.com/lhui-dev/rcli"
license = "MIT"
keywords = ["template", "rust", "project"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
rand = { version = "0.10.1", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
yaml_serde = "0.10.4"